@@ -1,6 +1,7 @@
 package org.cloudfoundry.identity.uaa.invitations;
 
 import com.fasterxml.jackson.core.type.TypeReference;
+import lombok.extern.slf4j.Slf4j;
 import org.cloudfoundry.identity.uaa.account.PasswordConfirmationValidation;
 import org.cloudfoundry.identity.uaa.authentication.UaaPrincipal;
 import org.cloudfoundry.identity.uaa.authentication.manager.DynamicZoneAwareAuthenticationManager;
@@ -10,6 +11,7 @@ import org.cloudfoundry.identity.uaa.constants.OriginKeys;
 import org.cloudfoundry.identity.uaa.provider.AbstractExternalOAuthIdentityProviderDefinition;
 import org.cloudfoundry.identity.uaa.provider.IdentityProvider;
 import org.cloudfoundry.identity.uaa.provider.IdentityProviderProvisioning;
+import org.cloudfoundry.identity.uaa.provider.LdapIdentityProviderDefinition;
 import org.cloudfoundry.identity.uaa.provider.SamlIdentityProviderDefinition;
 import org.cloudfoundry.identity.uaa.provider.ldap.ExtendedLdapUserDetails;
 import org.cloudfoundry.identity.uaa.provider.oauth.ExternalOAuthProviderConfigurator;
@@ -25,9 +27,7 @@ import org.cloudfoundry.identity.uaa.util.JsonUtils;
 import org.cloudfoundry.identity.uaa.util.ObjectUtils;
 import org.cloudfoundry.identity.uaa.util.UaaHttpRequestUtils;
 import org.cloudfoundry.identity.uaa.zone.BrandingInformation;
-import org.cloudfoundry.identity.uaa.zone.IdentityZoneHolder;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.cloudfoundry.identity.uaa.zone.beans.IdentityZoneManager;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.http.HttpStatus;
@@ -65,26 +65,26 @@ import static org.cloudfoundry.identity.uaa.constants.OriginKeys.OIDC10;
 import static org.cloudfoundry.identity.uaa.constants.OriginKeys.ORIGIN;
 import static org.cloudfoundry.identity.uaa.constants.OriginKeys.SAML;
 import static org.cloudfoundry.identity.uaa.constants.OriginKeys.UAA;
-import static org.cloudfoundry.identity.uaa.web.UaaSavedRequestAwareAuthenticationSuccessHandler.FORM_REDIRECT_PARAMETER;
 import static org.cloudfoundry.identity.uaa.util.SessionUtils.SAVED_REQUEST_SESSION_ATTRIBUTE;
+import static org.cloudfoundry.identity.uaa.web.UaaSavedRequestAwareAuthenticationSuccessHandler.FORM_REDIRECT_PARAMETER;
 import static org.springframework.util.StringUtils.hasText;
 import static org.springframework.web.bind.annotation.RequestMethod.GET;
 import static org.springframework.web.bind.annotation.RequestMethod.POST;
 
+@Slf4j
 @Controller
 @RequestMapping("/invitations")
 public class InvitationsController {
 
-    private static Logger logger = LoggerFactory.getLogger(InvitationsController.class);
-
+    private static final String EMAIL = "email";
     private final InvitationsService invitationsService;
     private final ExpiringCodeStore expiringCodeStore;
     private final PasswordValidator passwordValidator;
     private final IdentityProviderProvisioning identityProviderProvisioning;
     private final DynamicZoneAwareAuthenticationManager zoneAwareAuthenticationManager;
     private final UaaUserDatabase userDatabase;
-    private final String spEntityID;
     private final ScimUserProvisioning userProvisioning;
+    private final IdentityZoneManager identityZoneManager;
     private final ExternalOAuthProviderConfigurator externalOAuthProviderConfigurator;
 
     public InvitationsController(
@@ -94,8 +94,8 @@ public class InvitationsController {
             final IdentityProviderProvisioning identityProviderProvisioning,
             final DynamicZoneAwareAuthenticationManager zoneAwareAuthenticationManager,
             final UaaUserDatabase userDatabase,
-            final @Qualifier("samlEntityID") String spEntityID,
             final ScimUserProvisioning userProvisioning,
+            final IdentityZoneManager identityZoneManager,
             final @Qualifier("externalOAuthProviderConfigurator") ExternalOAuthProviderConfigurator externalOAuthProviderConfigurator) {
         this.invitationsService = invitationsService;
         this.expiringCodeStore = expiringCodeStore;
@@ -103,8 +103,8 @@ public class InvitationsController {
         this.identityProviderProvisioning = identityProviderProvisioning;
         this.zoneAwareAuthenticationManager = zoneAwareAuthenticationManager;
         this.userDatabase = userDatabase;
-        this.spEntityID = spEntityID;
         this.userProvisioning = userProvisioning;
+        this.identityZoneManager = identityZoneManager;
         this.externalOAuthProviderConfigurator = externalOAuthProviderConfigurator;
     }
 
@@ -116,7 +116,7 @@ public class InvitationsController {
     @RequestMapping(value = "/accept", method = GET, params = {"code"})
     public String acceptInvitePage(@RequestParam String code, Model model, HttpServletRequest request, HttpServletResponse response) {
 
-        ExpiringCode expiringCode = expiringCodeStore.peekCode(code, IdentityZoneHolder.get().getId());
+        ExpiringCode expiringCode = expiringCodeStore.peekCode(code, identityZoneManager.getCurrentIdentityZoneId());
         if ((null == expiringCode) || (null != expiringCode.getIntent() && !INVITATION.name().equals(expiringCode.getIntent()))) {
             return handleUnprocessableEntity(model, response, "error_message_code", "code_expired", "invitations/accept_invite");
         }
@@ -127,7 +127,7 @@ public class InvitationsController {
         });
         String origin = codeData.get(ORIGIN);
         try {
-            IdentityProvider provider = identityProviderProvisioning.retrieveByOrigin(origin, IdentityZoneHolder.get().getId());
+            IdentityProvider provider = identityProviderProvisioning.retrieveByOrigin(origin, identityZoneManager.getCurrentIdentityZoneId());
 
             UaaUser user = userDatabase.retrieveUserById(codeData.get("user_id"));
             boolean isUaaUserAndVerified =
@@ -137,15 +137,15 @@ public class InvitationsController {
             if (isUaaUserAndVerified || isExternalUserAndAcceptedInvite) {
                 AcceptedInvitation accepted = invitationsService.acceptInvitation(code, "");
                 String redirect = "redirect:" + accepted.getRedirectUri();
-                logger.debug(String.format("Redirecting accepted invitation for email:%s, id:%s to URL:%s", codeData.get("email"), codeData.get("user_id"), redirect));
+                log.debug("Redirecting accepted invitation for email:%s, id:%s to URL:%s".formatted(codeData.get(EMAIL), codeData.get("user_id"), redirect));
                 return redirect;
             } else if (SAML.equals(provider.getType())) {
                 setRequestAttributes(request, code, user);
 
                 SamlIdentityProviderDefinition definition = ObjectUtils.castInstance(provider.getConfig(), SamlIdentityProviderDefinition.class);
 
-                String redirect = "redirect:/" + SamlRedirectUtils.getIdpRedirectUrl(definition, spEntityID, IdentityZoneHolder.get());
-                logger.debug(String.format("Redirecting invitation for email:%s, id:%s single SAML IDP URL:%s", codeData.get("email"), codeData.get("user_id"), redirect));
+                String redirect = "redirect:/" + SamlRedirectUtils.getIdpRedirectUrl(definition);
+                log.debug("Redirecting invitation for email:%s, id:%s single SAML IDP URL:%s".formatted(codeData.get(EMAIL), codeData.get("user_id"), redirect));
                 return redirect;
             } else if (OIDC10.equals(provider.getType()) || OAUTH20.equals(provider.getType())) {
                 setRequestAttributes(request, code, user);
@@ -153,28 +153,28 @@ public class InvitationsController {
                 AbstractExternalOAuthIdentityProviderDefinition definition = ObjectUtils.castInstance(provider.getConfig(), AbstractExternalOAuthIdentityProviderDefinition.class);
 
                 String redirect = "redirect:" + externalOAuthProviderConfigurator.getIdpAuthenticationUrl(definition, provider.getOriginKey(), request);
-                logger.debug(String.format("Redirecting invitation for email:%s, id:%s OIDC IDP URL:%s", codeData.get("email"), codeData.get("user_id"), redirect));
+                log.debug("Redirecting invitation for email:%s, id:%s OIDC IDP URL:%s".formatted(codeData.get(EMAIL), codeData.get("user_id"), redirect));
                 return redirect;
             } else {
-                UaaPrincipal uaaPrincipal = new UaaPrincipal(codeData.get("user_id"), codeData.get("email"), codeData.get("email"), origin, null, IdentityZoneHolder.get().getId());
+                UaaPrincipal uaaPrincipal = new UaaPrincipal(codeData.get("user_id"), codeData.get(EMAIL), codeData.get(EMAIL), origin, null, identityZoneManager.getCurrentIdentityZoneId());
                 AnonymousAuthenticationToken token = new AnonymousAuthenticationToken("scim.invite", uaaPrincipal,
                         Collections.singletonList(UaaAuthority.UAA_INVITED));
                 SecurityContextHolder.getContext().setAuthentication(token);
                 model.addAttribute("provider", provider.getType());
                 model.addAttribute("code", code);
-                model.addAttribute("email", codeData.get("email"));
-                logger.debug(String.format("Sending user to accept invitation page email:%s, id:%s", codeData.get("email"), codeData.get("user_id")));
+                model.addAttribute(EMAIL, codeData.get(EMAIL));
+                log.debug("Sending user to accept invitation page email:%s, id:%s".formatted(codeData.get(EMAIL), codeData.get("user_id")));
             }
             updateModelWithConsentAttributes(model);
             return "invitations/accept_invite";
         } catch (EmptyResultDataAccessException noProviderFound) {
-            logger.debug(String.format("No available invitation providers for email:%s, id:%s", codeData.get("email"), codeData.get("user_id")));
+            log.debug("No available invitation providers for email:%s, id:%s".formatted(codeData.get(EMAIL), codeData.get("user_id")));
             return handleUnprocessableEntity(model, response, "error_message_code", "no_suitable_idp", "invitations/accept_invite");
         }
     }
 
     private void updateModelWithConsentAttributes(Model model) {
-        BrandingInformation zoneBranding = IdentityZoneHolder.get().getConfig().getBranding();
+        BrandingInformation zoneBranding = identityZoneManager.getCurrentIdentityZone().getConfig().getBranding();
         if (zoneBranding != null && zoneBranding.getConsent() != null) {
             model.addAttribute("consent_text", zoneBranding.getConsent().getText());
             model.addAttribute("consent_link", zoneBranding.getConsent().getLink());
@@ -239,43 +239,43 @@ public class InvitationsController {
 
     @RequestMapping(value = "/accept.do", method = POST)
     public String acceptInvitation(@RequestParam("password") String password,
-                                   @RequestParam("password_confirmation") String passwordConfirmation,
-                                   @RequestParam("code") String code,
-                                   @RequestParam(value = "does_user_consent", required = false) boolean doesUserConsent,
-                                   Model model,
-                                   HttpServletResponse response) {
+            @RequestParam("password_confirmation") String passwordConfirmation,
+            @RequestParam("code") String code,
+            @RequestParam(value = "does_user_consent", required = false) boolean doesUserConsent,
+            Model model,
+            HttpServletResponse response) {
 
         PasswordConfirmationValidation validation = new PasswordConfirmationValidation(password, passwordConfirmation);
 
         UaaPrincipal principal = (UaaPrincipal) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
 
-        final ExpiringCode expiringCode = expiringCodeStore.retrieveCode(code, IdentityZoneHolder.get().getId());
+        final ExpiringCode expiringCode = expiringCodeStore.retrieveCode(code, identityZoneManager.getCurrentIdentityZoneId());
 
         if (expiringCode == null || expiringCode.getData() == null) {
-            logger.debug("Failing invitation. Code not found.");
+            log.debug("Failing invitation. Code not found.");
             SecurityContextHolder.clearContext();
             return handleUnprocessableEntity(model, response, "error_message_code", "code_expired", "invitations/accept_invite");
         }
         Map<String, String> data = JsonUtils.readValue(expiringCode.getData(), new TypeReference<>() {
         });
         if (principal == null || data.get("user_id") == null || !data.get("user_id").equals(principal.getId())) {
-            logger.debug("Failing invitation. Code and user ID mismatch.");
+            log.debug("Failing invitation. Code and user ID mismatch.");
             SecurityContextHolder.clearContext();
             return handleUnprocessableEntity(model, response, "error_message_code", "code_expired", "invitations/accept_invite");
         }
 
-        final String newCode = expiringCodeStore.generateCode(expiringCode.getData(), new Timestamp(System.currentTimeMillis() + (10 * 60 * 1000)), expiringCode.getIntent(), IdentityZoneHolder.get().getId()).getCode();
-        BrandingInformation zoneBranding = IdentityZoneHolder.get().getConfig().getBranding();
+        final String newCode = expiringCodeStore.generateCode(expiringCode.getData(), new Timestamp(System.currentTimeMillis() + (10 * 60 * 1000)), expiringCode.getIntent(), identityZoneManager.getCurrentIdentityZoneId()).getCode();
+        BrandingInformation zoneBranding = identityZoneManager.getCurrentIdentityZone().getConfig().getBranding();
         if (zoneBranding != null && zoneBranding.getConsent() != null && !doesUserConsent) {
-            return processErrorReload(newCode, model, principal.getEmail(), response, "error_message_code", "missing_consent");
+            return processErrorReload(newCode, model, response, "error_message_code", "missing_consent");
         }
         if (!validation.valid()) {
-            return processErrorReload(newCode, model, principal.getEmail(), response, "error_message_code", validation.getMessageCode());
+            return processErrorReload(newCode, model, response, "error_message_code", validation.getMessageCode());
         }
         try {
             passwordValidator.validate(password);
         } catch (InvalidPasswordException e) {
-            return processErrorReload(newCode, model, principal.getEmail(), response, "error_message", e.getMessagesAsOneString());
+            return processErrorReload(newCode, model, response, "error_message", e.getMessagesAsOneString());
         }
         AcceptedInvitation invitation;
         try {
@@ -290,48 +290,48 @@ public class InvitationsController {
         return res;
     }
 
-    private String processErrorReload(String code, Model model, String email, HttpServletResponse response, String errorCode, String error) {
-        ExpiringCode expiringCode = expiringCodeStore.retrieveCode(code, IdentityZoneHolder.get().getId());
+    private String processErrorReload(String code, Model model, HttpServletResponse response, String errorCode, String error) {
+        ExpiringCode expiringCode = expiringCodeStore.retrieveCode(code, identityZoneManager.getCurrentIdentityZoneId());
         Map<String, String> codeData = JsonUtils.readValue(expiringCode.getData(), new TypeReference<>() {
         });
         try {
-            String newCode = expiringCodeStore.generateCode(expiringCode.getData(), new Timestamp(System.currentTimeMillis() + (10 * 60 * 1000)), expiringCode.getIntent(), IdentityZoneHolder.get().getId()).getCode();
+            String newCode = expiringCodeStore.generateCode(expiringCode.getData(), new Timestamp(System.currentTimeMillis() + (10 * 60 * 1000)), expiringCode.getIntent(), identityZoneManager.getCurrentIdentityZoneId()).getCode();
 
             model.addAttribute(errorCode, error);
             model.addAttribute("code", newCode);
             return "redirect:accept";
         } catch (EmptyResultDataAccessException noProviderFound) {
-            logger.debug(String.format("No available invitation providers for email:%s, id:%s", codeData.get("email"), codeData.get("user_id")));
+            log.debug("No available invitation providers for email:%s, id:%s".formatted(codeData.get(EMAIL), codeData.get("user_id")));
             return handleUnprocessableEntity(model, response, "error_message_code", "no_suitable_idp", "invitations/accept_invite");
         }
     }
 
     @RequestMapping(value = "/accept_enterprise.do", method = POST)
     public String acceptLdapInvitation(@RequestParam("enterprise_username") String username,
-                                       @RequestParam("enterprise_password") String password,
-                                       @RequestParam("enterprise_email") String email,
-                                       @RequestParam("code") String code,
-                                       Model model, HttpServletResponse response) {
+            @RequestParam("enterprise_password") String password,
+            @RequestParam("enterprise_email") String email,
+            @RequestParam("code") String code,
+            Model model, HttpServletResponse response) {
 
-        ExpiringCode expiringCode = expiringCodeStore.retrieveCode(code, IdentityZoneHolder.get().getId());
+        ExpiringCode expiringCode = expiringCodeStore.retrieveCode(code, identityZoneManager.getCurrentIdentityZoneId());
         if (expiringCode == null) {
             return handleUnprocessableEntity(model, response, "error_message_code", "code_expired", "invitations/accept_enterprise.do");
         }
 
-        String newCode = expiringCodeStore.generateCode(expiringCode.getData(), new Timestamp(System.currentTimeMillis() + (1000 * 60 * 10)), null, IdentityZoneHolder.get().getId()).getCode();
+        String newCode = expiringCodeStore.generateCode(expiringCode.getData(), new Timestamp(System.currentTimeMillis() + (1000 * 60 * 10)), null, identityZoneManager.getCurrentIdentityZoneId()).getCode();
 
         UsernamePasswordAuthenticationToken token = new UsernamePasswordAuthenticationToken(username, password);
-        AuthenticationManager authenticationManager = null;
-        IdentityProvider ldapProvider = null;
+        AuthenticationManager authenticationManager;
+        IdentityProvider<LdapIdentityProviderDefinition> ldapProvider;
         try {
-            ldapProvider = identityProviderProvisioning.retrieveByOrigin(OriginKeys.LDAP, IdentityZoneHolder.get().getId());
-            zoneAwareAuthenticationManager.getLdapAuthenticationManager(IdentityZoneHolder.get(), ldapProvider).getLdapAuthenticationManager();
-            authenticationManager = zoneAwareAuthenticationManager.getLdapAuthenticationManager(IdentityZoneHolder.get(), ldapProvider).getLdapManagerActual();
+            ldapProvider = identityProviderProvisioning.retrieveByOrigin(OriginKeys.LDAP, identityZoneManager.getCurrentIdentityZoneId());
+            zoneAwareAuthenticationManager.getLdapAuthenticationManager(identityZoneManager.getCurrentIdentityZone(), ldapProvider).getLdapAuthenticationManager();
+            authenticationManager = zoneAwareAuthenticationManager.getLdapAuthenticationManager(identityZoneManager.getCurrentIdentityZone(), ldapProvider).getLdapManagerActual();
         } catch (EmptyResultDataAccessException e) {
             //ldap provider was not available
             return handleUnprocessableEntity(model, response, "error_message_code", "no_suitable_idp", "invitations/accept_invite");
         } catch (Exception x) {
-            logger.error("Unable to retrieve LDAP config.", x);
+            log.error("Unable to retrieve LDAP config.", x);
             return handleUnprocessableEntity(model, response, "error_message_code", "no_suitable_idp", "invitations/accept_invite");
         }
         Authentication authentication;
@@ -339,20 +339,19 @@ public class InvitationsController {
             authentication = authenticationManager.authenticate(token);
             Map<String, String> data = JsonUtils.readValue(expiringCode.getData(), new TypeReference<>() {
             });
-            ScimUser user = userProvisioning.retrieve(data.get("user_id"), IdentityZoneHolder.get().getId());
+            ScimUser user = userProvisioning.retrieve(data.get("user_id"), identityZoneManager.getCurrentIdentityZoneId());
             if (!user.getPrimaryEmail().equalsIgnoreCase(((ExtendedLdapUserDetails) authentication.getPrincipal()).getEmailAddress())) {
-                model.addAttribute("email", data.get("email"));
+                model.addAttribute(EMAIL, data.get(EMAIL));
                 model.addAttribute("provider", OriginKeys.LDAP);
-                model.addAttribute("code", expiringCodeStore.generateCode(expiringCode.getData(), new Timestamp(System.currentTimeMillis() + (10 * 60 * 1000)), null, IdentityZoneHolder.get().getId()).getCode());
+                model.addAttribute("code", expiringCodeStore.generateCode(expiringCode.getData(), new Timestamp(System.currentTimeMillis() + (10 * 60 * 1000)), null, identityZoneManager.getCurrentIdentityZoneId()).getCode());
                 return handleUnprocessableEntity(model, response, "error_message", "invite.email_mismatch", "invitations/accept_invite");
             }
-
 
             if (authentication.isAuthenticated()) {
                 //change username from email to username
                 user.setUserName(((ExtendedLdapUserDetails) authentication.getPrincipal()).getUsername());
-                userProvisioning.update(user.getId(), user, IdentityZoneHolder.get().getId());
-                zoneAwareAuthenticationManager.getLdapAuthenticationManager(IdentityZoneHolder.get(), ldapProvider).authenticate(token);
+                userProvisioning.update(user.getId(), user, identityZoneManager.getCurrentIdentityZoneId());
+                zoneAwareAuthenticationManager.getLdapAuthenticationManager(identityZoneManager.getCurrentIdentityZone(), ldapProvider).authenticate(token);
                 AcceptedInvitation accept = invitationsService.acceptInvitation(newCode, "");
                 return "redirect:" + "/login?success=invite_accepted&form_redirect_uri=" + URLEncoder.encode(accept.getRedirectUri());
             } else {
@@ -361,12 +360,11 @@ public class InvitationsController {
         } catch (AuthenticationException x) {
             return handleUnprocessableEntity(model, response, "error_message", x.getMessage(), "invitations/accept_invite");
         } catch (Exception x) {
-            logger.error("Unable to authenticate against LDAP", x);
+            log.error("Unable to authenticate against LDAP", x);
             model.addAttribute("ldap", true);
-            model.addAttribute("email", email);
+            model.addAttribute(EMAIL, email);
             return handleUnprocessableEntity(model, response, "error_message", "bad_credentials", "invitations/accept_invite");
         }
-
     }
 
     private String handleUnprocessableEntity(Model model, HttpServletResponse response, String attributeKey, String attributeValue, String view) {
