@@ -1,4 +1,5 @@
-/*******************************************************************************
+/*
+ * *****************************************************************************
  *     Cloud Foundry
  *     Copyright (c) [2009-2016] Pivotal Software, Inc. All Rights Reserved.
  *
@@ -71,7 +72,7 @@ public class RemoteTokenServices implements ResourceServerTokenServices {
 
     private String clientSecret;
 
-    private boolean storeClaims = false;
+    private boolean storeClaims;
 
     public RemoteTokenServices() {
         restTemplate = new RestTemplate();
@@ -118,7 +119,7 @@ public class RemoteTokenServices implements ResourceServerTokenServices {
     @Override
     public OAuth2Authentication loadAuthentication(String accessToken) throws AuthenticationException {
 
-        MultiValueMap<String, String> formData = new LinkedMultiValueMap<String, String>();
+        MultiValueMap<String, String> formData = new LinkedMultiValueMap<>();
         formData.add("token", accessToken);
         HttpHeaders headers = new HttpHeaders();
         headers.set("Authorization", getAuthorizationHeader(clientId, clientSecret));
@@ -132,7 +133,7 @@ public class RemoteTokenServices implements ResourceServerTokenServices {
         Assert.state(map.containsKey("client_id"), "Client id must be present in response from auth server");
         String remoteClientId = (String) map.get("client_id");
 
-        Set<String> scope = new HashSet<String>();
+        Set<String> scope = new HashSet<>();
         if (map.containsKey("scope")) {
             @SuppressWarnings("unchecked")
             Collection<String> values = (Collection<String>) map.get("scope");
@@ -141,13 +142,13 @@ public class RemoteTokenServices implements ResourceServerTokenServices {
         AuthorizationRequest clientAuthentication = new AuthorizationRequest(remoteClientId, scope);
 
         if (map.containsKey("resource_ids") || map.containsKey("client_authorities")) {
-            Set<String> resourceIds = new HashSet<String>();
+            Set<String> resourceIds = new HashSet<>();
             if (map.containsKey("resource_ids")) {
                 @SuppressWarnings("unchecked")
                 Collection<String> values = (Collection<String>) map.get("resource_ids");
                 resourceIds.addAll(values);
             }
-            Set<GrantedAuthority> clientAuthorities = new HashSet<GrantedAuthority>();
+            Set<GrantedAuthority> clientAuthorities = new HashSet<>();
             if (map.containsKey("client_authorities")) {
                 @SuppressWarnings("unchecked")
                 Collection<String> values = (Collection<String>) map.get("client_authorities");
@@ -162,8 +163,8 @@ public class RemoteTokenServices implements ResourceServerTokenServices {
         Map<String, String> requestParameters = new HashMap<>();
         if (isStoreClaims()) {
             for (Map.Entry<String, Object> entry : map.entrySet()) {
-                if (entry.getValue()!=null && entry.getValue() instanceof String) {
-                    requestParameters.put(entry.getKey(), (String)entry.getValue());
+                if (entry.getValue() != null && entry.getValue() instanceof String) {
+                    requestParameters.put(entry.getKey(), (String) entry.getValue());
                 }
             }
         }
@@ -188,13 +189,12 @@ public class RemoteTokenServices implements ResourceServerTokenServices {
         if (username == null) {
             return null;
         }
-        Set<GrantedAuthority> userAuthorities = new HashSet<GrantedAuthority>();
+        Set<GrantedAuthority> userAuthorities = new HashSet<>();
         if (map.containsKey("user_authorities")) {
             @SuppressWarnings("unchecked")
             Collection<String> values = (Collection<String>) map.get("user_authorities");
             userAuthorities.addAll(getAuthorities(values));
-        }
-        else {
+        } else {
             // User authorities had better not be empty or we might mistake user
             // for unauthenticated
             userAuthorities.addAll(getAuthorities(scope));
@@ -210,7 +210,7 @@ public class RemoteTokenServices implements ResourceServerTokenServices {
     }
 
     private Set<GrantedAuthority> getAuthorities(Collection<String> authorities) {
-        Set<GrantedAuthority> result = new HashSet<GrantedAuthority>();
+        Set<GrantedAuthority> result = new HashSet<>();
         for (String authority : authorities) {
             result.add(new SimpleGrantedAuthority(authority));
         }
@@ -218,7 +218,7 @@ public class RemoteTokenServices implements ResourceServerTokenServices {
     }
 
     private String getAuthorizationHeader(String clientId, String clientSecret) {
-        String creds = String.format("%s:%s", clientId, clientSecret);
+        String creds = "%s:%s".formatted(clientId, clientSecret);
         return "Basic " + new String(Base64.encode(creds.getBytes(StandardCharsets.UTF_8)));
     }
 
@@ -228,7 +228,7 @@ public class RemoteTokenServices implements ResourceServerTokenServices {
         }
         @SuppressWarnings("rawtypes")
         ResponseEntity<Map> response = restTemplate.exchange(path, HttpMethod.POST,
-            new HttpEntity<MultiValueMap<String, String>>(formData, headers), Map.class);
+                new HttpEntity<MultiValueMap<String, String>>(formData, headers), Map.class);
         @SuppressWarnings("rawtypes")
         Map map = response != null && response.getBody() != null ? response.getBody() : Collections.emptyMap();
         @SuppressWarnings("unchecked")
