@@ -53,8 +53,8 @@ public class HeaderParameters {
     }
 
     HeaderParameters(String alg,
-                     String kid,
-                     String jku) {
+            String kid,
+            String jku) {
         if (alg == null) {
             throw new IllegalArgumentException("alg is required");
         }
@@ -90,7 +90,7 @@ public class HeaderParameters {
 
     public void setTyp(String typ) {
         if (typ != null && !JWT.equalsIgnoreCase(typ)) {
-            throw new IllegalArgumentException(String.format("typ is not \"%s\"", JWT));
+            throw new IllegalArgumentException("typ is not \"%s\"".formatted(JWT));
         }
         this.typ = typ;
     }
