@@ -1,4 +1,5 @@
-/*******************************************************************************
+/*
+ * *****************************************************************************
  *     Cloud Foundry
  *     Copyright (c) [2009-2016] Pivotal Software, Inc. All Rights Reserved.
  *
@@ -85,13 +86,13 @@ public class CorsFilter extends OncePerRequestFilter {
     public static final String X_REQUESTED_WITH = "X-Requested-With";
     public static final String WILDCARD = "*";
 
-    private CorsConfiguration xhrConfiguration = new CorsConfiguration();
-    private CorsConfiguration defaultConfiguration = new CorsConfiguration();
+    private final CorsConfiguration xhrConfiguration = new CorsConfiguration();
+    private final CorsConfiguration defaultConfiguration = new CorsConfiguration();
     private final IdentityZoneManager identityZoneManager;
     private final boolean enforceSystemZoneSettings;
 
     public CorsFilter(final IdentityZoneManager identityZoneManager,
-                      @Value("${cors.enforceSystemZonePolicyInAllZones:false}") final boolean enforceSystemZoneSettings) {
+            @Value("${cors.enforceSystemZonePolicyInAllZones:false}") final boolean enforceSystemZoneSettings) {
         if (logger.isInfoEnabled()) {
             logger.info("`cors.enforceSystemZonePolicyInAllZones` is set to `{}`. Per-zone CORS policy settings are to be {}.",
                     enforceSystemZoneSettings, enforceSystemZoneSettings ? "ignored" : "honored");
@@ -101,8 +102,8 @@ public class CorsFilter extends OncePerRequestFilter {
         xhrConfiguration.setAllowedMethods(Arrays.asList(GET.toString(), OPTIONS.toString()));
         defaultConfiguration.setAllowedMethods(Arrays.asList(GET.toString(), OPTIONS.toString(), POST.toString(), PUT.toString(), DELETE.toString(), PATCH.toString()));
 
-        xhrConfiguration.setAllowedHeaders(Arrays.asList(ACCEPT, ACCEPT_LANGUAGE, CONTENT_TYPE, CONTENT_LANGUAGE,AUTHORIZATION, X_REQUESTED_WITH));
-        defaultConfiguration.setAllowedHeaders(Arrays.asList(ACCEPT, ACCEPT_LANGUAGE, CONTENT_TYPE, CONTENT_LANGUAGE,AUTHORIZATION));
+        xhrConfiguration.setAllowedHeaders(Arrays.asList(ACCEPT, ACCEPT_LANGUAGE, CONTENT_TYPE, CONTENT_LANGUAGE, AUTHORIZATION, X_REQUESTED_WITH));
+        defaultConfiguration.setAllowedHeaders(Arrays.asList(ACCEPT, ACCEPT_LANGUAGE, CONTENT_TYPE, CONTENT_LANGUAGE, AUTHORIZATION));
 
         xhrConfiguration.setAllowedCredentials(true);
         defaultConfiguration.setAllowedCredentials(false);
@@ -134,7 +135,7 @@ public class CorsFilter extends OncePerRequestFilter {
         }
 
         if (logger.isDebugEnabled()) {
-            logger.debug("CORS Processing request: "+getRequestInfo(request));
+            logger.debug("CORS Processing request: " + getRequestInfo(request));
         }
         if (isXhrRequest(request)) {
             handleRequest(request, response, filterChain, resolveXhrCorsConfiguration());
@@ -142,21 +143,21 @@ public class CorsFilter extends OncePerRequestFilter {
             handleRequest(request, response, filterChain, resolveDefaultCorsConfiguration());
         }
         if (logger.isDebugEnabled()) {
-            logger.debug("CORS processing completed for: "+getRequestInfo(request)+" Status:"+response.getStatus());
+            logger.debug("CORS processing completed for: " + getRequestInfo(request) + " Status:" + response.getStatus());
         }
     }
 
     protected boolean handleRequest(HttpServletRequest request,
-                                    HttpServletResponse response,
-                                    FilterChain filterChain,
-                                    CorsConfiguration configuration) throws IOException, ServletException {
+            HttpServletResponse response,
+            FilterChain filterChain,
+            CorsConfiguration configuration) throws IOException, ServletException {
 
         boolean isPreflightRequest = OPTIONS.matches(request.getMethod());
 
         //Validate if this CORS request is allowed for this method
         String method = request.getMethod();
         if (!isPreflightRequest && !isAllowedMethod(method, configuration)) {
-            logger.debug(String.format("Request with invalid method was rejected: %s", method));
+            logger.debug("Request with invalid method was rejected: %s".formatted(method));
             response.sendError(METHOD_NOT_ALLOWED.value(), "Illegal method.");
             return true;
         }
@@ -168,21 +169,21 @@ public class CorsFilter extends OncePerRequestFilter {
         URI originURI;
         try {
             originURI = new URI(origin);
-        } catch(URISyntaxException e) {
-            logger.debug(String.format("Request with invalid origin was rejected: %s", origin));
+        } catch (URISyntaxException e) {
+            logger.debug("Request with invalid origin was rejected: %s".formatted(origin));
             response.sendError(FORBIDDEN.value(), "Invalid origin");
             return true;
         }
 
         if (!isAllowedOrigin(origin, configuration)) {
-            logger.debug(String.format("Request with origin: %s was rejected because it didn't match allowed origins", origin));
+            logger.debug("Request with origin: %s was rejected because it didn't match allowed origins".formatted(origin));
             response.sendError(FORBIDDEN.value(), "Illegal origin");
             return true;
         }
 
         String requestUri = request.getRequestURI();
         if (!isAllowedRequestUri(requestUri, configuration)) {
-            logger.debug(String.format("Request with URI: %s was rejected because it didn't match allowed URIs", requestUri));
+            logger.debug("Request with URI: %s was rejected because it didn't match allowed URIs".formatted(requestUri));
             response.sendError(FORBIDDEN.value(), "Illegal request URI");
             return true;
         }
@@ -238,7 +239,7 @@ public class CorsFilter extends OncePerRequestFilter {
     protected String buildCommaDelimitedString(List<String> list) {
         StringBuilder builder = new StringBuilder();
         for (String s : list) {
-            if (builder.length()>0) {
+            if (builder.length() > 0) {
                 builder.append(", ");
             }
             builder.append(s);
@@ -248,15 +249,15 @@ public class CorsFilter extends OncePerRequestFilter {
 
     protected List<String> splitCommaDelimitedString(String s) {
         String[] list = s.replace(" ", "").split(",");
-        if (list==null || list.length==0) {
-            return Collections.EMPTY_LIST;
+        if (list == null || list.length == 0) {
+            return Collections.emptyList();
         }
         return Arrays.asList(list);
     }
 
     protected void buildCorsPreFlightResponse(final HttpServletRequest request,
-                                              final HttpServletResponse response,
-                                              final CorsConfiguration configuration) throws IOException {
+            final HttpServletResponse response,
+            final CorsConfiguration configuration) throws IOException {
         String accessControlRequestMethod = request.getHeader(ACCESS_CONTROL_REQUEST_METHOD);
 
         //preflight requires the Access-Control-Request-Method header
@@ -276,7 +277,7 @@ public class CorsFilter extends OncePerRequestFilter {
         //we require Access-Control-Request-Headers header
         String accessControlRequestHeaders = request.getHeader(ACCESS_CONTROL_REQUEST_HEADERS);
         if (null == accessControlRequestHeaders) {
-            response.sendError(BAD_REQUEST.value(),"Missing "+ACCESS_CONTROL_REQUEST_HEADERS+" header.");
+            response.sendError(BAD_REQUEST.value(), "Missing " + ACCESS_CONTROL_REQUEST_HEADERS + " header.");
             return;
         }
         if (!headersAllowed(accessControlRequestHeaders, configuration)) {
@@ -320,7 +321,7 @@ public class CorsFilter extends OncePerRequestFilter {
                 return true;
             }
         }
-        logger.debug(String.format("The '%s' URI does not allow CORS requests.", uri));
+        logger.debug("The '%s' URI does not allow CORS requests.".formatted(uri));
         return false;
     }
 
@@ -331,7 +332,7 @@ public class CorsFilter extends OncePerRequestFilter {
                 return true;
             }
         }
-        logger.debug(String.format("The '%s' origin is not allowed to make CORS requests.",origin));
+        logger.debug("The '%s' origin is not allowed to make CORS requests.".formatted(origin));
         return false;
     }
 
@@ -374,9 +375,9 @@ public class CorsFilter extends OncePerRequestFilter {
             for (String allowedUri : configuration.getAllowedUris()) {
                 try {
                     configuration.getAllowedUriPatterns().add(Pattern.compile(allowedUri));
-                    logger.debug(String.format("URI '%s' is allowed for a %s CORS requests.", allowedUri, type));
+                    logger.debug("URI '%s' is allowed for a %s CORS requests.".formatted(allowedUri, type));
                 } catch (PatternSyntaxException patternSyntaxException) {
-                    logger.error("Invalid regular expression pattern in cors."+type+".allowed.uris: " + allowedUri, patternSyntaxException);
+                    logger.error("Invalid regular expression pattern in cors." + type + ".allowed.uris: " + allowedUri, patternSyntaxException);
                 }
             }
         }
@@ -384,9 +385,9 @@ public class CorsFilter extends OncePerRequestFilter {
             for (String allowedOrigin : configuration.getAllowedOrigins()) {
                 try {
                     configuration.getAllowedOriginPatterns().add(Pattern.compile(allowedOrigin));
-                    logger.debug(String.format("Origin '%s' is allowed for a %s CORS requests.", allowedOrigin, type));
+                    logger.debug("Origin '%s' is allowed for a %s CORS requests.".formatted(allowedOrigin, type));
                 } catch (PatternSyntaxException patternSyntaxException) {
-                    logger.error("Invalid regular expression pattern in cors."+type+".allowed.origins: " + allowedOrigin, patternSyntaxException);
+                    logger.error("Invalid regular expression pattern in cors." + type + ".allowed.origins: " + allowedOrigin, patternSyntaxException);
                 }
             }
         }
@@ -394,13 +395,13 @@ public class CorsFilter extends OncePerRequestFilter {
 
     //----------------REQUEST INFO ----------------------------------------------//
     public String getRequestInfo(HttpServletRequest request) {
-        return String.format("URI: %s; Scheme: %s; Host: %s; Port: %s; Origin: %s; Method: %s",
-                             request.getRequestURI(),
-                             request.getScheme(),
-                             request.getServerName(),
-                             request.getServerPort(),
-                             request.getHeader("Origin"),
-                             request.getMethod());
+        return "URI: %s; Scheme: %s; Host: %s; Port: %s; Origin: %s; Method: %s".formatted(
+                request.getRequestURI(),
+                request.getScheme(),
+                request.getServerName(),
+                request.getServerPort(),
+                request.getHeader("Origin"),
+                request.getMethod());
     }
 
     //----------------CORS XHR ONLY ---------------------------------------------//
