@@ -1,4 +1,5 @@
-/*******************************************************************************
+/*
+ * *****************************************************************************
  * Cloud Foundry
  * Copyright (c) [2009-2016] Pivotal Software, Inc. All Rights Reserved.
  * <p>
@@ -12,6 +13,35 @@
  *******************************************************************************/
 package org.cloudfoundry.identity.uaa.util;
 
+import com.google.common.collect.Lists;
+import com.nimbusds.jwt.JWTClaimsSet;
+import org.cloudfoundry.identity.uaa.oauth.KeyInfo;
+import org.cloudfoundry.identity.uaa.oauth.KeyInfoService;
+import org.cloudfoundry.identity.uaa.oauth.TokenRevokedException;
+import org.cloudfoundry.identity.uaa.oauth.common.exceptions.InvalidTokenException;
+import org.cloudfoundry.identity.uaa.oauth.common.exceptions.UnauthorizedClientException;
+import org.cloudfoundry.identity.uaa.oauth.jwt.ChainedSignatureVerifier;
+import org.cloudfoundry.identity.uaa.oauth.jwt.Jwt;
+import org.cloudfoundry.identity.uaa.oauth.jwt.JwtHelper;
+import org.cloudfoundry.identity.uaa.oauth.jwt.SignatureVerifier;
+import org.cloudfoundry.identity.uaa.oauth.jwt.Verifier;
+import org.cloudfoundry.identity.uaa.oauth.provider.ClientDetails;
+import org.cloudfoundry.identity.uaa.oauth.token.ClaimConstants;
+import org.cloudfoundry.identity.uaa.oauth.token.RevocableToken;
+import org.cloudfoundry.identity.uaa.oauth.token.RevocableTokenProvisioning;
+import org.cloudfoundry.identity.uaa.provider.NoSuchClientException;
+import org.cloudfoundry.identity.uaa.user.UaaUser;
+import org.cloudfoundry.identity.uaa.user.UaaUserDatabase;
+import org.cloudfoundry.identity.uaa.zone.IdentityZoneHolder;
+import org.cloudfoundry.identity.uaa.zone.MultitenantClientServices;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.dao.EmptyResultDataAccessException;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.AuthorityUtils;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
+
+import javax.validation.constraints.NotNull;
 import java.time.Instant;
 import java.util.Arrays;
 import java.util.Collection;
@@ -23,40 +53,9 @@ import java.util.Set;
 import java.util.function.Function;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
-import javax.validation.constraints.NotNull;
-
-import com.nimbusds.jwt.JWTClaimsSet;
-import org.cloudfoundry.identity.uaa.provider.NoSuchClientException;
-import org.cloudfoundry.identity.uaa.oauth.jwt.ChainedSignatureVerifier;
-import org.cloudfoundry.identity.uaa.oauth.jwt.SignatureVerifier;
-import org.cloudfoundry.identity.uaa.oauth.jwt.Verifier;
-import org.springframework.dao.EmptyResultDataAccessException;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.AuthorityUtils;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
-import org.cloudfoundry.identity.uaa.oauth.common.exceptions.InvalidTokenException;
-import org.cloudfoundry.identity.uaa.oauth.common.exceptions.UnauthorizedClientException;
-import org.cloudfoundry.identity.uaa.oauth.provider.ClientDetails;
-
-import com.google.common.collect.Lists;
-import org.cloudfoundry.identity.uaa.oauth.KeyInfo;
-import org.cloudfoundry.identity.uaa.oauth.KeyInfoService;
-import org.cloudfoundry.identity.uaa.oauth.TokenRevokedException;
-import org.cloudfoundry.identity.uaa.oauth.jwt.Jwt;
-import org.cloudfoundry.identity.uaa.oauth.jwt.JwtHelper;
-import org.cloudfoundry.identity.uaa.oauth.token.ClaimConstants;
-import org.cloudfoundry.identity.uaa.oauth.token.RevocableToken;
-import org.cloudfoundry.identity.uaa.oauth.token.RevocableTokenProvisioning;
-import org.cloudfoundry.identity.uaa.user.UaaUser;
-import org.cloudfoundry.identity.uaa.user.UaaUserDatabase;
-import org.cloudfoundry.identity.uaa.zone.IdentityZoneHolder;
-import org.cloudfoundry.identity.uaa.zone.MultitenantClientServices;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import static java.util.Collections.emptySet;
 import static java.util.Optional.ofNullable;
-import static java.util.stream.Collectors.toList;
 import static org.cloudfoundry.identity.uaa.oauth.client.ClientConstants.REQUIRED_USER_GROUPS;
 import static org.cloudfoundry.identity.uaa.oauth.token.ClaimConstants.AUD;
 import static org.cloudfoundry.identity.uaa.oauth.token.ClaimConstants.CID;
@@ -116,8 +115,7 @@ public abstract class JwtTokenSignedByThisUAA {
 
         KeyInfo signingKey = keyInfoService.getKey(kid, tokenJwt.getHeader().getAlg());
         if (signingKey == null) {
-            throw new InvalidTokenException(String.format(
-                    "Token header claim [kid] references unknown signing key : [%s]", kid
+            throw new InvalidTokenException("Token header claim [kid] references unknown signing key : [%s]".formatted(kid
             ));
         }
 
@@ -210,7 +208,7 @@ public abstract class JwtTokenSignedByThisUAA {
             } else {
                 List<String> grantedScopes =
                         authorities.stream()
-                                .map(GrantedAuthority::getAuthority).collect(toList());
+                                .map(GrantedAuthority::getAuthority).toList();
 
                 checkRequestedScopesAreGranted(grantedScopes);
             }
@@ -228,11 +226,11 @@ public abstract class JwtTokenSignedByThisUAA {
                 requestedScopes.stream().filter(
                         requestedScope -> grantedScopePatterns.stream()
                                 .noneMatch(grantedScopePattern -> grantedScopePattern.matcher(requestedScope).matches())
-                ).collect(toList());
+                ).toList();
         if (!missingScopes.isEmpty()) {
             String scopeClaimKey = scopeClaimKey().keyName();
             String message =
-                    String.format("Some required \"%s\" are missing: [%s]",
+                    "Some required \"%s\" are missing: [%s]".formatted(
                             scopeClaimKey,
                             String.join(", ", missingScopes));
             throw new InvalidTokenException(message);
@@ -304,7 +302,7 @@ public abstract class JwtTokenSignedByThisUAA {
                 clientScopes = ofNullable(client.getAuthorities())
                         .map(a -> a.stream()
                                 .map(GrantedAuthority::getAuthority)
-                                .collect(toList()))
+                                .toList())
                         .orElse(Collections.emptyList());
             } else {
                 clientScopes = client.getScope();
@@ -355,21 +353,21 @@ public abstract class JwtTokenSignedByThisUAA {
 
         Object audClaim = claims.get(AUD);
         List<String> audience;
-        if (audClaim instanceof String) {
-            audience = Collections.singletonList((String) audClaim);
+        if (audClaim instanceof String string) {
+            audience = Collections.singletonList(string);
         } else if (audClaim == null) {
             audience = Collections.emptyList();
         } else {
             try {
                 audience = ((List<?>) audClaim).stream()
-                        .map(s -> (String) s)
-                        .collect(toList());
+                        .map(String.class::cast)
+                        .toList();
             } catch (ClassCastException ex) {
                 throw new InvalidTokenException("The token's audience claim is invalid or unparseable.", ex);
             }
         }
 
-        List<String> notInAudience = clients.stream().filter(c -> !audience.contains(c)).collect(toList());
+        List<String> notInAudience = clients.stream().filter(c -> !audience.contains(c)).toList();
         if (!notInAudience.isEmpty()) {
             String joinedAudiences = notInAudience.stream().map(c -> "".equals(c) ? "EMPTY_VALUE" : c).collect(Collectors.joining(", "));
             throw new InvalidTokenException("Some parties were not in the token audience: " + joinedAudiences, null);
@@ -407,7 +405,9 @@ public abstract class JwtTokenSignedByThisUAA {
     }
 
     private static boolean equals(Object a, Object b) {
-        if (a == null) return b == null;
+        if (a == null) {
+            return b == null;
+        }
         return a.equals(b);
     }
 
@@ -415,7 +415,7 @@ public abstract class JwtTokenSignedByThisUAA {
         String scopeKeyName = scopeClaimKey.keyName();
 
         if (!claims.containsKey(scopeKeyName)) {
-            String errorMessage = String.format("The token does not bear a \"%s\" claim.", scopeKeyName);
+            String errorMessage = "The token does not bear a \"%s\" claim.".formatted(scopeKeyName);
             logger.error(errorMessage);
             throw new InvalidTokenException(errorMessage);
         }
@@ -426,8 +426,7 @@ public abstract class JwtTokenSignedByThisUAA {
         }
 
         InvalidTokenException unparsableClaimException = new InvalidTokenException(
-                String.format(
-                        "The token's \"%s\" claim is invalid or unparseable.",
+                "The token's \"%s\" claim is invalid or unparseable.".formatted(
                         scopeKeyName
                 )
         );
@@ -438,8 +437,8 @@ public abstract class JwtTokenSignedByThisUAA {
 
         List<?> scopes = (List<?>) scopeClaim;
 
-        if(scopes.stream().allMatch(String.class::isInstance)) {
-            return scopes.stream().map(o -> (String) o).collect(toList());
+        if (scopes.stream().allMatch(String.class::isInstance)) {
+            return scopes.stream().map(String.class::cast).toList();
         } else {
             throw unparsableClaimException;
         }
