@@ -21,14 +21,14 @@ import com.nimbusds.jwt.JWTClaimsSet;
 import com.nimbusds.jwt.JWTClaimsSetTransformer;
 import com.nimbusds.jwt.SignedJWT;
 import org.cloudfoundry.identity.uaa.oauth.client.ClientConstants;
+import org.cloudfoundry.identity.uaa.oauth.common.exceptions.InvalidTokenException;
 import org.cloudfoundry.identity.uaa.oauth.jwt.JwtHelper;
+import org.cloudfoundry.identity.uaa.oauth.provider.ClientDetails;
 import org.cloudfoundry.identity.uaa.oauth.token.ClaimConstants;
 import org.cloudfoundry.identity.uaa.oauth.token.Claims;
 import org.cloudfoundry.identity.uaa.user.UaaUser;
 import org.cloudfoundry.identity.uaa.zone.IdentityZone;
 import org.springframework.security.core.GrantedAuthority;
-import org.cloudfoundry.identity.uaa.oauth.common.exceptions.InvalidTokenException;
-import org.cloudfoundry.identity.uaa.oauth.provider.ClientDetails;
 import org.springframework.web.util.UriComponentsBuilder;
 
 import java.net.MalformedURLException;
@@ -43,7 +43,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.emptySet;
 import static java.util.Optional.ofNullable;
@@ -59,12 +58,13 @@ public final class UaaTokenUtils {
 
     public static final Pattern jwtPattern = Pattern.compile("[a-zA-Z0-9_\\-\\\\=]*\\.[a-zA-Z0-9_\\-\\\\=]*\\.[a-zA-Z0-9_\\-\\\\=]*");
 
-    private UaaTokenUtils() { }
+    private UaaTokenUtils() {
+    }
 
     public static String getRevocationHash(List<String> salts) {
         String result = "";
         for (String s : salts) {
-            byte[] hashable = (result+ "###" + s).getBytes();
+            byte[] hashable = (result + "###" + s).getBytes();
             result = Integer.toHexString(murmurhash3x8632(hashable, 0, hashable.length, 0xF0F0));
         }
         return result;
@@ -72,10 +72,11 @@ public final class UaaTokenUtils {
 
     /**
      * This code is public domain.
+     * <p>
+     * The MurmurHash3 algorithm was created by Austin Appleby and put into the public domain.
      *
-     *  The MurmurHash3 algorithm was created by Austin Appleby and put into the public domain.
-     *  @see <a href="http://code.google.com/p/smhasher">http://code.google.com/p/smhasher</a>
-     *  @see <a href="https://github.com/yonik/java_util/blob/master/src/util/hash/MurmurHash3.java">https://github.com/yonik/java_util/blob/master/src/util/hash/MurmurHash3.java</a>
+     * @see <a href="http://code.google.com/p/smhasher">http://code.google.com/p/smhasher</a>
+     * @see <a href="https://github.com/yonik/java_util/blob/master/src/util/hash/MurmurHash3.java">https://github.com/yonik/java_util/blob/master/src/util/hash/MurmurHash3.java</a>
      */
     public static int murmurhash3x8632(byte[] data, int offset, int len, int seed) {
 
@@ -100,7 +101,7 @@ public final class UaaTokenUtils {
         // tail
         int k1 = 0;
 
-        switch(len & 0x03) {
+        switch (len & 0x03) {
             case 3:
                 k1 = (data[roundedEnd + 2] & 0xff) << 16;
                 // fallthrough
@@ -113,6 +114,7 @@ public final class UaaTokenUtils {
                 k1 = (k1 << 15) | (k1 >>> 17);  // ROTL32(k1,15);
                 k1 *= c2;
                 h1 ^= k1;
+                break;
             default:
         }
 
@@ -131,7 +133,7 @@ public final class UaaTokenUtils {
 
     public static Set<String> retainAutoApprovedScopes(Collection<String> requestedScopes, Set<String> autoApprovedScopes) {
         HashSet<String> result = new HashSet<>();
-        if(autoApprovedScopes == null){
+        if (autoApprovedScopes == null) {
             return result;
         }
         if (autoApprovedScopes.contains("true")) {
@@ -149,10 +151,10 @@ public final class UaaTokenUtils {
     }
 
     public static boolean isUserToken(Map<String, Object> claims) {
-        if (claims.get(GRANT_TYPE)!=null) {
+        if (claims.get(GRANT_TYPE) != null) {
             return !GRANT_TYPE_CLIENT_CREDENTIALS.equals(claims.get(GRANT_TYPE));
         }
-        if (claims.get(SUB)!=null) {
+        if (claims.get(SUB) != null) {
             if (claims.get(SUB).equals(claims.get(USER_ID))) {
                 return true;
             } else if (claims.get(SUB).equals(claims.get(CID))) {
@@ -171,19 +173,19 @@ public final class UaaTokenUtils {
     }
 
     public static String getRevocableTokenSignature(UaaUser user, String tokenSalt, String clientId, String clientSecret) {
-        String[] salts = new String[] {
-            clientId,
-            clientSecret,
-            tokenSalt,
-            user == null ? null : user.getId(),
-            user == null ? null : user.getPassword(),
-            user == null ? null : user.getSalt(),
-            user == null ? null : user.getEmail(),
-            user == null ? null : user.getUsername(),
+        String[] salts = new String[]{
+                clientId,
+                clientSecret,
+                tokenSalt,
+                user == null ? null : user.getId(),
+                user == null ? null : user.getPassword(),
+                user == null ? null : user.getSalt(),
+                user == null ? null : user.getEmail(),
+                user == null ? null : user.getUsername(),
         };
         List<String> saltlist = new LinkedList<>();
         for (String s : salts) {
-            if (s!=null) {
+            if (s != null) {
                 saltlist.add(s);
             }
         }
@@ -209,9 +211,9 @@ public final class UaaTokenUtils {
     public static String constructTokenEndpointUrl(String issuer, IdentityZone identityZone) throws URISyntaxException {
         URI uri;
         if (!identityZone.isUaa()) {
-            String zone_issuer = identityZone.getConfig() != null ? identityZone.getConfig().getIssuer() : null;
-            if(zone_issuer != null) {
-                uri = validateIssuer(zone_issuer);
+            String zoneIssuer = identityZone.getConfig() != null ? identityZone.getConfig().getIssuer() : null;
+            if (zoneIssuer != null) {
+                uri = validateIssuer(zoneIssuer);
                 return UriComponentsBuilder.fromUri(uri).pathSegment("oauth/token").build().toUriString();
             }
         }
@@ -234,16 +236,16 @@ public final class UaaTokenUtils {
 
     public static boolean hasRequiredUserAuthorities(Collection<String> requiredGroups, Collection<? extends GrantedAuthority> userGroups) {
         return hasRequiredUserGroups(requiredGroups,
-                                     ofNullable(userGroups).orElse(emptySet())
-                                        .stream()
-                                        .map(GrantedAuthority::getAuthority)
-                                        .collect(Collectors.toList())
+                ofNullable(userGroups).orElse(emptySet())
+                        .stream()
+                        .map(GrantedAuthority::getAuthority)
+                        .toList()
         );
     }
 
     public static boolean hasRequiredUserGroups(Collection<String> requiredGroups, Collection<String> userGroups) {
         return ofNullable(userGroups).orElse(emptySet())
-            .containsAll(ofNullable(requiredGroups).orElse(emptySet()));
+                .containsAll(ofNullable(requiredGroups).orElse(emptySet()));
     }
 
     public static <T> T getClaims(String jwtToken, Class<T> toClazz) {
