@@ -1,10 +1,11 @@
 package org.cloudfoundry.identity.uaa.web;
 
+import lombok.Getter;
+import lombok.Setter;
+import lombok.extern.slf4j.Slf4j;
 import org.cloudfoundry.identity.uaa.util.JsonUtils;
 import org.cloudfoundry.identity.uaa.util.TimeService;
 import org.cloudfoundry.identity.uaa.util.TimeServiceImpl;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.lang.NonNull;
@@ -23,26 +24,26 @@ import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicLong;
 
-import static java.lang.String.format;
 import static java.util.Collections.emptyList;
 import static java.util.Collections.emptySet;
 import static java.util.Optional.ofNullable;
-import static java.util.stream.Collectors.toList;
 import static javax.servlet.http.HttpServletResponse.SC_SERVICE_UNAVAILABLE;
 
+@Slf4j
 public class LimitedModeUaaFilter extends OncePerRequestFilter {
 
     public static final String ERROR_CODE = "uaa_unavailable";
     public static final String ERROR_MESSAGE = "UAA intentionally in limited mode, operation not permitted. Please try later.";
     public static final long STATUS_INTERVAL_MS = 5000;
-    private static Logger logger = LoggerFactory.getLogger(LimitedModeUaaFilter.class);
 
     private Set<String> permittedMethods = emptySet();
     private List<AntPathRequestMatcher> endpoints = emptyList();
-    private volatile boolean enabled = false;
-    private File statusFile = null;
+    private volatile boolean enabled;
+    @Getter
+    private File statusFile;
+    @Setter
     private TimeService timeService = new TimeServiceImpl();
-    private AtomicLong lastFileCheck = new AtomicLong(0);
+    private final AtomicLong lastFileCheck = new AtomicLong(0);
 
     @Override
     protected void doFilterInternal(
@@ -53,11 +54,8 @@ public class LimitedModeUaaFilter extends OncePerRequestFilter {
             if (isMethodAllowed(request) || isEndpointAllowed(request)) {
                 filterChain.doFilter(request, response);
             } else {
-                logger.debug(format("Operation Not permitted in limited mode for URL:%s and method:%s",
-                        request.getRequestURI(),
-                        request.getMethod()
-                        )
-                );
+                log.debug("Operation Not permitted in limited mode for URL:{} and method:{}",
+                        request.getRequestURI(), request.getMethod());
                 Map<String, String> json = getErrorData();
                 if (acceptsJson(request)) {
                     response.setStatus(SC_SERVICE_UNAVAILABLE);
@@ -99,7 +97,7 @@ public class LimitedModeUaaFilter extends OncePerRequestFilter {
                 .orElse(emptySet())
                 .stream()
                 .map(AntPathRequestMatcher::new)
-                .collect(toList());
+                .toList();
     }
 
     public void setPermittedMethods(Set<String> permittedMethods) {
@@ -121,17 +119,9 @@ public class LimitedModeUaaFilter extends OncePerRequestFilter {
         return enabled;
     }
 
-    public File getStatusFile() {
-        return statusFile;
-    }
-
     public void setStatusFile(File statusFile) {
         this.statusFile = statusFile;
         lastFileCheck.set(0);
-    }
-
-    public void setTimeService(TimeService ts) {
-        this.timeService = ts;
     }
 
     public long getLastFileSystemCheck() {
