@@ -2,18 +2,19 @@ package org.cloudfoundry.identity.uaa.scim.jdbc;
 
 import org.assertj.core.api.Assertions;
 import org.cloudfoundry.identity.uaa.annotations.WithDatabaseContext;
+import org.cloudfoundry.identity.uaa.oauth.common.util.RandomValueStringGenerator;
 import org.cloudfoundry.identity.uaa.resources.jdbc.JdbcPagingListFactory;
 import org.cloudfoundry.identity.uaa.resources.jdbc.LimitSqlAdapter;
 import org.cloudfoundry.identity.uaa.scim.ScimGroup;
 import org.cloudfoundry.identity.uaa.scim.ScimGroupMember;
 import org.cloudfoundry.identity.uaa.scim.ScimUser;
 import org.cloudfoundry.identity.uaa.scim.ScimUserProvisioning;
-import org.cloudfoundry.identity.uaa.scim.exception.ScimResourceConstraintFailedException;
 import org.cloudfoundry.identity.uaa.scim.exception.InvalidScimResourceException;
+import org.cloudfoundry.identity.uaa.scim.exception.ScimResourceConstraintFailedException;
 import org.cloudfoundry.identity.uaa.scim.exception.ScimResourceNotFoundException;
 import org.cloudfoundry.identity.uaa.scim.test.TestUtils;
-import org.cloudfoundry.identity.uaa.util.beans.DbUtils;
 import org.cloudfoundry.identity.uaa.util.TimeServiceImpl;
+import org.cloudfoundry.identity.uaa.util.beans.DbUtils;
 import org.cloudfoundry.identity.uaa.zone.IdentityZone;
 import org.cloudfoundry.identity.uaa.zone.IdentityZoneHolder;
 import org.cloudfoundry.identity.uaa.zone.JdbcIdentityZoneProvisioning;
@@ -29,7 +30,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.IncorrectResultSizeDataAccessException;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
-import org.cloudfoundry.identity.uaa.oauth.common.util.RandomValueStringGenerator;
 
 import java.security.SecureRandom;
 import java.sql.SQLException;
@@ -38,7 +38,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static org.cloudfoundry.identity.uaa.scim.jdbc.JdbcScimGroupMembershipManager.MEMBERSHIP_FIELDS;
 import static org.cloudfoundry.identity.uaa.scim.jdbc.JdbcScimGroupMembershipManager.MEMBERSHIP_TABLE;
@@ -47,9 +46,19 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.core.Is.is;
-import static org.junit.jupiter.api.Assertions.*;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
+import static org.mockito.Mockito.anyString;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.reset;
+import static org.mockito.Mockito.spy;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 import static org.springframework.util.StringUtils.hasText;
 
 @WithDatabaseContext
@@ -63,6 +72,8 @@ class JdbcScimGroupProvisioningTests {
     private NamedParameterJdbcTemplate namedJdbcTemplate;
     @Autowired
     private LimitSqlAdapter limitSqlAdapter;
+
+    private String groupName;
 
     private JdbcScimGroupProvisioning dao;
     private JdbcScimGroupMembershipManager memberships;
@@ -82,6 +93,9 @@ class JdbcScimGroupProvisioningTests {
 
     @BeforeEach
     void initJdbcScimGroupProvisioningTests() throws SQLException {
+        DbUtils dbUtils = new DbUtils();
+        groupName = dbUtils.getQuotedIdentifier("groups", jdbcTemplate);
+
         generator = new RandomValueStringGenerator();
         SecureRandom random = new SecureRandom();
         random.setSeed(System.nanoTime());
@@ -97,7 +111,6 @@ class JdbcScimGroupProvisioningTests {
 
         validateGroupCountInZone(0, zoneId);
 
-        DbUtils dbUtils = new DbUtils();
         dao = spy(new JdbcScimGroupProvisioning(namedJdbcTemplate,
                 new JdbcPagingListFactory(namedJdbcTemplate, limitSqlAdapter),
                 dbUtils));
@@ -306,9 +319,9 @@ class JdbcScimGroupProvisioningTests {
     void cannotCreateNotAllowedGroup() {
         IdentityZoneHolder.get().getConfig().getUserConfig().setAllowedGroups(Arrays.asList("allowedGroup"));
         assertThrowsWithMessageThat(
-            InvalidScimResourceException.class,
-            () -> internalCreateGroup("notAllowedGroup"),
-            containsString("is not allowed")
+                InvalidScimResourceException.class,
+                () -> internalCreateGroup("notAllowedGroup"),
+                containsString("is not allowed")
         );
     }
 
@@ -319,9 +332,9 @@ class JdbcScimGroupProvisioningTests {
         g.setDisplayName("notAllowedGroup");
         g.setDescription("description-update");
         try {
-           dao.update(g1Id, g, zoneId);
-           fail();
-        } catch(InvalidScimResourceException e) {
+            dao.update(g1Id, g, zoneId);
+            fail();
+        } catch (InvalidScimResourceException e) {
             assertTrue(e.getMessage().contains("is not allowed"));
         }
     }
@@ -378,7 +391,7 @@ class JdbcScimGroupProvisioningTests {
         IdentityZone zone = MultitenancyFixture.identityZone(id, "subdomain-" + id);
         IdentityZoneModifiedEvent event = IdentityZoneModifiedEvent.identityZoneCreated(zone);
         dao.onApplicationEvent(event);
-        List<String> groups = dao.retrieveAll(id).stream().map(ScimGroup::getDisplayName).collect(Collectors.toList());
+        List<String> groups = dao.retrieveAll(id).stream().map(ScimGroup::getDisplayName).toList();
         ZoneManagementScopes.getSystemScopes()
                 .forEach(scope ->
                         assertTrue(groups.contains(scope), "Scope:" + scope + " should have been bootstrapped into the new zone")
@@ -483,7 +496,7 @@ class JdbcScimGroupProvisioningTests {
     void sqlInjectionAttack4Fails() {
         assertThrows(
                 IllegalArgumentException.class,
-                () -> dao.query("displayName eq \"something\"; select id from groups where id='''; select " + SQL_INJECTION_FIELDS
+                () -> dao.query("displayName eq \"something\"; select id from "+groupName+" where id='''; select " + SQL_INJECTION_FIELDS
                         + " from groups where displayName='something'", zoneId)
         );
     }
@@ -528,8 +541,7 @@ class JdbcScimGroupProvisioningTests {
     }
 
     private void validateGroupCountInZone(int expected, String zoneId) {
-        int existingGroupCount = jdbcTemplate.queryForObject("select count(id) from groups where identity_zone_id='" + zoneId + "'", Integer.class);
-        assertEquals(expected, existingGroupCount);
+        int existingGroupCount = jdbcTemplate.queryForObject("select count(id) from "+groupName+" where identity_zone_id='" + zoneId + "'", Integer.class);
     }
 
     private void validateGroup(ScimGroup group, String name, String zoneId) {
